--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<title>Kashish Shah</title>
+	<link rel="icon" type="image/png" href="img/profile.jpg">
 	<link rel="stylesheet" type="text/css" href="bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="jquery-ui.css">
-	<link rel="stylesheet" type="text/css" href="font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
 	<meta charset="utf-8">
