--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
                   </div>
                   <div class="row">
 										<div class="col-md-6">
-											<p>Don't exactly know how to describe myself in few sentences. An ambitious code-geek from the day one when I have attached with the IT industry. Kick started my career in July 2014 as a back-end developer along with that responsibility also gripped over the MEAN stack. Have experience to work with challenging, rewarding and hefty development with a fun, fast-paced environment.</p>
+											<p>Don't precisely know how to depict myself in few sentences. A driven code-nerd from the very beginning when I have joined with the IT business. Kick began my vocation in July 2014 as a back-end developer alongside that obligation additionally grasped over the MEAN stack. Have understanding to work with testing, fulfilling and powerful advancement with a fun, quick paced environment.</p>
 										</div>
 										<div class="col-md-6">
-											<p>I keep following my dreams, curios to not only learn but also explore the opportunity and develop with innovative ideas. Result oriented person always come across challenges which drives me forward and opens the door of new luxury. In very short period of time, almost 2.5 years I have worked with number of technologies and get rid of so many obstacles. Many have doubts just due to the less experience but that is what on I never give damn.</p>
+											<p>I continue following my dreams, taking trinkets to learn as well as to explore the opportunity and develop with innovative ideas.Result oriented individual dependably go over difficulties which drives me forward and opens the door of new luxury. In brief timeframe, nearly 2.5 years I have worked with number of innovations and dispose of such a variety of obstructions. Many have questions quite recently because of the less experience however that is the thing that on I never give damn.</p>
 										</div>
 									</div>
 								</div>
