--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 											<div class="col-md-6">									
 												<ul class="info-list clearfix">
 													<li><span class="inf">Name </span>  <span class="value">Kashish Shah</span></li>
-													<li><span class="inf">Phone</span>  <span class="value"> +91 9408229002	</span></li>
+													<li><span class="inf">Phone</span>  <span class="value"> 908-756-2969</span></li>
 													<!-- <li><span class="inf">Date of birth</span>  <span class="value"> March 4, 1993 </span></li> -->
 													<!-- <li><span class="inf">Address</span>  <span class="value"> A/9, Sulabh Flats</span></li> -->
 												</ul>											
